# es_compression

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  DESIGN.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: main.yml  test.yml
benchmark/: brotli_benchmark.dart  gzip_benchmark.dart  lz4_benchmark.dart  zstd_benchmark.dart
benchmark/utils/: benchmark_utils.dart
doc/: design_doc.md
example/: README.md  brotli_example.dart  lz4_example.dart  rle_example.dart  zstd_example.dart
example/android_jniLibs_generate/: README.md  local.properties  settings.gradle
example/android_jniLibs_generate/app/: build.gradle
example/android_jniLibs_generate/app/src/androidTest/java/es_compression/example/jniLibs/: ExampleInstrumentedTest.java
example/android_jniLibs_generate/app/src/main/: AndroidManifest.xml
example/android_jniLibs_generate/app/src/main/cpp/: native-lib.cpp
example/android_jniLibs_generate/app/src/main/java/es_compression/example/jniLibs/: MainActivity.java
example/android_jniLibs_generate/app/src/main/res/values/: strings.xml
example/android_jniLibs_generate/app/src/test/java/es_compression/example/jniLibs/: ExampleUnitTest.java
example/android_jniLibs_generate/gradle/wrapper/: gradle-wrapper.properties
example/brotli/: brotli_example.dart
example/lz4/: lz4_example.dart
example/utils/: example_utils.dart
example/zstd/: zstd_example.dart
lib/: brotli.dart  brotli_io.dart  framework.dart  framework_io.dart  lz4.dart  lz4_io.dart  zstd.dart  zstd_io.dart
lib/src/brotli/: codec.dart  codec_io.dart  codec_stub.dart  decoder.dart  encoder.dart  options.dart  validation.dart  version.dart
lib/src/brotli/blobs/: esbrotli-mac64.dylib
lib/src/brotli/ffi/: codec.dart  compress_filter.dart  constants.dart  decompress_filter.dart  dispatcher.dart  functions.dart  library.dart  types.dart
lib/src/brotli/stubs/: codec.dart  compress_filter.dart  decompress_filter.dart
lib/src/common/: buffers.dart  converters.dart  filters.dart  sinks.dart
lib/src/common/ffi/: openlibrary.dart
lib/src/framework/: buffers.dart  converters.dart  filters.dart  sinks.dart
lib/src/framework/dart/: buffers.dart  filters.dart
lib/src/framework/native/: allocation.dart  buffers.dart  filters.dart  open_library.dart  openlibrary.dart
lib/src/lz4/: codec.dart  codec_io.dart  codec_stub.dart  decoder.dart  encoder.dart  options.dart  validation.dart  version.dart
lib/src/lz4/blobs/: eslz4-mac64.dylib
lib/src/lz4/ffi/: codec.dart  compress_filter.dart  constants.dart  decompress_filter.dart  dispatcher.dart  functions.dart  library.dart  types.dart
lib/src/lz4/stubs/: codec.dart  compress_filter.dart  decompress_filter.dart
lib/src/zstd/: codec.dart  codec_io.dart  codec_stub.dart  decoder.dart  encoder.dart  options.dart  validation.dart  version.dart
lib/src/zstd/blobs/: eszstd-mac64.dylib
lib/src/zstd/ffi/: codec.dart  compress_filter.dart  constants.dart  decompress_filter.dart  dispatcher.dart  functions.dart  library.dart  types.dart
lib/src/zstd/stubs/: codec.dart  compress_filter.dart  decompress_filter.dart
test/: benchmarks_test.dart  brotli_test.dart  brotli_tests.dart  buffer_test.dart  buffer_tests.dart  escompress_test.dart  examples_test.dart  lz4_test.dart  lz4_tests.dart  zstd_test.dart  zstd_tests.dart
test/brotli/: brotli_tests.dart
test/framework/: buffer_tests.dart
tool/blob_builder/: CMakeLists.txt
tool/blob_builder/brotli/: CMakeLists.txt  esbrotli.def.in  esbrotli.rc.in
tool/blob_builder/lz4/: CMakeLists.txt  eslz4.def.in  eslz4.rc.in
tool/blob_builder/zstd/: CMakeLists.txt  eszstd.def.in  eszstd.rc.in
